JumpScript/tests/baselines/reference/es6ClassTest9.errors.txt
tests/cases/compiler/es6ClassTest9.jump(1,15): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/es6ClassTest9.jump(1,18): error TS1005: '{' expected.
tests/cases/compiler/es6ClassTest9.jump(1,19): error TS1109: Expression expected.
tests/cases/compiler/es6ClassTest9.jump(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/es6ClassTest9.jump (4 errors) ====
    declare class foo();
                  ~~~
!!! error TS2300: Duplicate identifier 'foo'.
                     ~
!!! error TS1005: '{' expected.
                      ~
!!! error TS1109: Expression expected.
    function foo() {}
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    